<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/alertDialogTitle"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertDialogTitle"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/alertDialogComment"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/comment_hint"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/alertDialogBoxOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/alert_dialog_box_ok"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/alertDialogBoxCANCEL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/alert_dialog_box_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>