<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/see_pie_chart"
        android:icon="@drawable/ic_pie_chart_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Search" />

    <item
        android:id="@+id/delete_comment_history"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Search" />

</menu>