<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/left_bar"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/light_sage"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_list_item"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="10sp"
            tools:text="#42" />

        <ImageButton
            android:id="@+id/read_note_button"
            android:src="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/right_bar"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/cornflower_blue_65">

    </FrameLayout>


</LinearLayout>